tabs and arrows..

--- a/midfi_proto/index.html
+++ b/midfi_proto/index.html
@@ -15,116 +15,265 @@
 <a href="#" class="mainTab kids">Kids</a>
 <a href="#" class="login">Settings</a>
 </header>
-
+<div id="first"></div>
 <div id="main">
+    <div class="tab" draggable="true">Tab</div>
     <div id="scroll" class='scrollable'>
         <div class='sectionwrapper'>
-            <section><div>Movie 1</div></section>
-            <section><div>Movie 2</div></section>
-            <section><div>Movie 3</div></section>
-            <section><div>Movie 4</div></section>
-            <section><div>Movie 5</div></section>
-            <section><div>Movie 6</div></section>
-            <section><div>Movie 7</div></section>
-            <section><div>Movie 8</div></section>
-            <section><div>Movie 9</div></section>
-            <section><div>Movie 10</div></section>
-            <section><div>Movie 11</div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
         </div>
     </div>
+
+
+    <div class="tab" draggable="true">Tab</div>
     <div id="scroll2" class='scrollable'>
         <div class='sectionwrapper'>
-            <section><div>Movie 10</div></section>
-            <section><div>Movie 20</div></section>
-            <section><div>Movie 30</div></section>
-            <section><div>Movie 40</div></section>
-            <section><div>Movie 50</div></section>
-            <section><div>Movie 60</div></section>
-            <section><div>Movie 70</div></section>
-            <section><div>Movie 80</div></section>
-            <section><div>Movie 90</div></section>
-            <section><div>Movie 100</div></section>
-            <section><div>Movie 110</div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
         </div>
     </div>
 
+    <div class="tab" draggable="true">Tab</div>
     <div id="scroll3" class='scrollable'>
         <div class='sectionwrapper'>
-            <section><div>Movie 10</div></section>
-            <section><div>Movie 20</div></section>
-            <section><div>Movie 30</div></section>
-            <section><div>Movie 40</div></section>
-            <section><div>Movie 50</div></section>
-            <section><div>Movie 60</div></section>
-            <section><div>Movie 70</div></section>
-            <section><div>Movie 80</div></section>
-            <section><div>Movie 90</div></section>
-            <section><div>Movie 100</div></section>
-            <section><div>Movie 110</div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
         </div>
     </div>
-
+    <div class="tab" draggable="true">Tab</div>
     <div id="scroll4" class='scrollable'>
         <div class='sectionwrapper'>
-            <section><div>Movie 10</div></section>
-            <section><div>Movie 20</div></section>
-            <section><div>Movie 30</div></section>
-            <section><div>Movie 40</div></section>
-            <section><div>Movie 50</div></section>
-            <section><div>Movie 60</div></section>
-            <section><div>Movie 70</div></section>
-            <section><div>Movie 80</div></section>
-            <section><div>Movie 90</div></section>
-            <section><div>Movie 100</div></section>
-            <section><div>Movie 110</div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
         </div>
     </div>
-
+    <div class="tab" draggable="true">Tab</div>
     <div id="scroll5" class='scrollable'>
         <div class='sectionwrapper'>
-            <section><div>Movie 10</div></section>
-            <section><div>Movie 20</div></section>
-            <section><div>Movie 30</div></section>
-            <section><div>Movie 40</div></section>
-            <section><div>Movie 50</div></section>
-            <section><div>Movie 60</div></section>
-            <section><div>Movie 70</div></section>
-            <section><div>Movie 80</div></section>
-            <section><div>Movie 90</div></section>
-            <section><div>Movie 100</div></section>
-            <section><div>Movie 110</div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
         </div>
     </div>
-
+    <div class="tab" draggable="true">Tab</div>
     <div id="scroll6" class='scrollable'>
         <div class='sectionwrapper'>
-            <section><div>Movie 10</div></section>
-            <section><div>Movie 20</div></section>
-            <section><div>Movie 30</div></section>
-            <section><div>Movie 40</div></section>
-            <section><div>Movie 50</div></section>
-            <section><div>Movie 60</div></section>
-            <section><div>Movie 70</div></section>
-            <section><div>Movie 80</div></section>
-            <section><div>Movie 90</div></section>
-            <section><div>Movie 100</div></section>
-            <section><div>Movie 110</div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
         </div>
     </div>
-
+    <div class="tab" draggable="true">Tab</div>
     <div id="scroll7" class='scrollable'>
         <div class='sectionwrapper'>
-            <section><div>Movie 10</div></section>
-            <section><div>Movie 20</div></section>
-            <section><div>Movie 30</div></section>
-            <section><div>Movie 40</div></section>
-            <section><div>Movie 50</div></section>
-            <section><div>Movie 60</div></section>
-            <section><div>Movie 70</div></section>
-            <section><div>Movie 80</div></section>
-            <section><div>Movie 90</div></section>
-            <section><div>Movie 100</div></section>
-            <section><div>Movie 110</div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
+            <section><div></div></section>
         </div>
     </div>
 
