--- a/midfi_proto/index.html
+++ b/midfi_proto/index.html
@@ -528,7 +528,7 @@ var Navigation = {
             //console.log('click');
             e.preventDefault();
             alert('Sorry, not yet implemented!');
-        });
+        },false);
     },
     //insert new tab
     addTabToMainNav: function (tabName,id){
