--- a/midfi_proto/index.html
+++ b/midfi_proto/index.html
@@ -67,7 +67,7 @@
                         <p>Movie Title here<br>
                         USA 2010<br>
                         94 min<br><br>
-                        Chuck Norris, Brad Pitt, Tom Cruise, ...<br>
+                        Chuck Norris, Brad Pitt, Tom Cruise...<br>
                         <a href="#" onclick="return false;">> show more</a></p>
                     </figcaption>
                 </figure>
@@ -121,7 +121,7 @@
                     <img src="series/m-{i}.jpg">
                     <figcaption>
 
-                        <h3>>  &nbsp; Watch</h3>
+                        <h3>>  &nbsp; Watch Episode 1</h3>
                         <p>Series Title here<br>
                         SEASON 3<br>
                         USA 2012<br>
