--- a/midfi_proto/index.html
+++ b/midfi_proto/index.html
@@ -20,6 +20,7 @@
       <li id="watchlistTab" class="tab mainTab"> <span>Watch List</span>
       </li>
     </ul>
+      <a href="#" class="login">Settings</a>
 </header>
 
 <div id="first"></div>
@@ -33,7 +34,7 @@
 
 <!--JS includes-->
 <script src='ftscroller-master/lib/ftscroller.js'></script>
-<script src='jquery.js'></script>
+
 
 <!-- JS templates -->
 <script id="movieTemplate" type="template">
@@ -863,10 +864,11 @@ var Navigation = {
 
 };
 Navigation.init();
+</script>
 
-
+<script src='jquery.js'></script>
+<script>
 //---------- experiments
-
     $('.watchLater').on('click', function () {
         var cart = $('#watchlistTab');
         var imgtodrag = $(this).parent('.item').find("img").eq(0);
@@ -900,8 +902,6 @@ Navigation.init();
                 }
             },1000);
 
-            
-
             imgclone.animate({
                 'width': 0,
                     'height': 0
@@ -910,8 +910,6 @@ Navigation.init();
             });
         }
     });
-
-
 </script>
 </body>
 </html>
